# FlyIn

./: .gitignore  .tmp_validate_challenger.py  AGENTS.md  Makefile  README.md  a.conf  b.conf  challenger.txt  main.py  main_algorithm.py  main_model.py  main_parsers.py  main_rendering.py  main_rendering_models.py  main_rendering_utils.py  pyproject.toml  requirements.txt  result.txt  test.conf
maps/: edge_case.conf
src/: __init__.py  model.py  validation.py
test/: invalid_connection_bad_metadata_format.conf  invalid_connection_before_hub_defined.conf  invalid_connection_just_dash.conf  invalid_connection_max_link_capacity_zero.conf  invalid_connection_metadata_bad_key.conf  invalid_connection_no_dash.conf  invalid_connection_only_one_hub.conf  invalid_connection_self_loop.conf  invalid_connection_undefined_hub.conf  invalid_duplicate_connection.conf  invalid_duplicate_end_hub.conf  invalid_duplicate_hub_name.conf  invalid_duplicate_position.conf  invalid_duplicate_start_hub.conf  invalid_garbage_line.conf  invalid_hub_name_with_hyphen.conf  invalid_hub_name_with_space.conf  invalid_hub_non_numeric_coord.conf  invalid_hub_too_few_args.conf  invalid_metadata_bad_format.conf  invalid_metadata_bad_key.conf  invalid_metadata_bad_zone.conf  invalid_metadata_max_drones_zero.conf  invalid_metadata_no_brackets.conf  invalid_missing_end_hub.conf  invalid_missing_nb_drones.conf  invalid_missing_start_hub.conf  invalid_nb_drones_negative.conf  invalid_nb_drones_too_large.conf  invalid_nb_drones_zero.conf  invalid_not_nb_drones_first.conf  invalid_only_comment.conf  run_tests.py  (+8 more)
(+51 files in other folders)
