[project]
name = "flyin"
version = "0.1.0"
requires-python = ">=3.12"
description = "Drone simulation"
authors = [{name="nyramana",  email="nyramana@student.42antananarivo.mg"}]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pygame-ce = "^2.5.7"
pydantic = "^2.13.4"


[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# On confirme à uv que c'est une application/un script simple, pas un package diffusable
[tool.uv]
package = false
